# lab5

./: CMakeLists.txt  main.cpp  screens.cpp  screens.h  trip.cpp  trip.h
